<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/trigger_on">
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/monday"
            android:key="switch_2" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/tuesday"
            android:key="switch_3" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/wednesday"
            android:key="switch_4" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/thursday"
            android:key="switch_5" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/friday"
            android:key="switch_6" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/saturday"
            android:key="switch_7" />
        <SwitchPreference
            android:defaultValue="true"
            android:title="@string/sunday"
            android:key="switch_1" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings_notification_label">
        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_sleep_started"
            android:title="@string/settings_notification_switch"
            android:inputType="textMultiLine"
            android:minLines="5" />

        <EditTextPreference
            android:key="popup_countdown"
            android:title="Popup tooltip countdown timer (seconds)"
            android:summary="Time to react before sleep if device is in use."
            android:defaultValue="60"
            android:inputType="number" />
            
        <EditTextPreference
            android:key="delay_timer"
            android:title="Delay action timer (minutes)"
            android:summary="Snooze time if 'Delay' is pressed. Set to 0 to disable."
            android:defaultValue="0"
            android:inputType="number" />
    </PreferenceCategory>

</PreferenceScreen>
