<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.mine.autosleep.MainActivity">

        <Switch
            android:id="@+id/switchApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="16dp"
            android:text="@string/toggle_app"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/enableSleepText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switchApp"
            android:layout_alignParentStart="true"
            android:enabled="false"
            android:text="@string/sleep_starts"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editEnableSleep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enableSleepText"
            android:layout_alignParentStart="true"
            android:enabled="false"
            android:textAppearance="@android:style/TextAppearance.Material.Display3"
            android:text="@string/default_time_start" />

        <TextView
            android:id="@+id/disableSleepText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editEnableSleep"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:enabled="false"
            android:text="@string/sleep_ends"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/layoutSleepEnds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/disableSleepText"
            android:layout_alignParentStart="true"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editDisableSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textAppearance="@android:style/TextAppearance.Material.Display3"
                android:text="@string/default_time_end" />

            <TextView
                android:id="@+id/nextDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="12dp"
                android:enabled="false"
                android:text="@string/next_day"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textStyle="italic" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupStartDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutSleepEnds"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_today"
                android:textSize="18sp"
                android:paddingEnd="16dp" />

            <RadioButton
                android:id="@+id/radioTomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_tomorrow"
                android:textSize="18sp" />
        </RadioGroup>

    </RelativeLayout>
</ScrollView>
